syntax = "proto3";
option go_package = "pb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

message User {
    string address  = 1;
    string name     = 2;
    string avatar   = 3;
}

message Contact {
    string id                         = 1;
    string address                    = 2;
    string username                   = 3;
    string avatar                     = 4;
    repeated Cafe inboxes             = 5;
    google.protobuf.Timestamp created = 6;
    google.protobuf.Timestamp updated = 7;
}

message Node {
    string name                        = 1;
    bool pin                           = 2;
    bool plaintext                     = 3;
    string mill                        = 4;
    map<string, string> opts           = 5;
    google.protobuf.Struct json_schema = 6;
    map<string, Link> links            = 8;
}

message Link {
    string use                         = 1;
    bool pin                           = 2;
    bool plaintext                     = 3;
    string mill                        = 4;
    map<string, string> opts           = 5;
    google.protobuf.Struct json_schema = 6;
}

message Thread {
    string id               = 1;
    string key              = 2;
    bytes sk                = 3;
    string name             = 4;
    string schema           = 5;
    string initiator        = 6;
    Type type               = 7;
    Sharing sharing         = 8;
    repeated string members = 9;
    State state             = 10;
    string head             = 11;

    // Type controls read (R), annotate (A), and write (W) access
    enum Type {
        Private  = 0; // initiator: RAW, members:
        ReadOnly = 1; // initiator: RAW, members: R
        Public   = 2; // initiator: RAW, members: RA
        Open     = 3; // initiator: RAW, members: RAW
    }

    // Sharing controls if (Y/N) a thread can be shared
    enum Sharing {
        NotShared  = 0; // initiator: N, members: N
        InviteOnly = 1; // initiator: Y, members: N
        Shared     = 2; // initiator: Y, members: Y
    }

    // State indicates the loading state
    enum State {
        LoadingBehind = 0; // blocks are behind loaded behind head
        Loaded        = 1; // blocks are all loaded
        LoadingAhead  = 2; // blocks are being loaded ahead
    }

    // view info
    Block head_block  = 101;
    Node schema_node  = 102;
    int32 block_count = 103;
    int32 peer_count  = 104;
}

message Block {
    string id                      = 1;
    string thread                  = 2;
    string author                  = 3;
    BlockType type                 = 4;
    google.protobuf.Timestamp date = 5;
    repeated string parents        = 6;
    string target                  = 7;
    string body                    = 8;

    enum BlockType {
        MERGE    = 0; // block is stored in plaintext, no payload
        IGNORE   = 1;
        FLAG     = 2;
        JOIN     = 3;
        ANNOUNCE = 4;
        LEAVE    = 5; // no payload
        MESSAGE  = 6;
        FILES    = 7;
        COMMENT  = 8;
        LIKE     = 9;
        INVITE   = 50;
    }

    // view info
    User user = 101;
}

message FileIndex {
    string mill                     = 1;
    string checksum                 = 2;
    string source                   = 3;
    string opts                     = 4;
    string hash                     = 5;
    string key                      = 6;
    string media                    = 7;
    string name                     = 8;
    int64 size                      = 9;
    google.protobuf.Timestamp added = 10;
    google.protobuf.Struct meta     = 11;
    repeated string targets         = 12;
}

message Cafe {
    string peer           = 1;
    string address        = 2;
    string api            = 3;
    string protocol       = 4;
    string node           = 5;
    string url            = 6;
    repeated string swarm = 7;
}

message CafeSession {
    string id                      = 1;
    string access                  = 2;
    google.protobuf.Timestamp exp  = 3;
    string refresh                 = 4;
    google.protobuf.Timestamp rexp = 5;
    string subject                 = 6;
    string type                    = 7;
    Cafe cafe                      = 8;
}
